--- a/sample02/directives/directives02.html
+++ b/sample02/directives/directives02.html
@@ -3,9 +3,9 @@
 
 <head>
 
-<link href="./bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-<link href="./bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet" />
-<script src="./bower_components/angularjs/angular.min.js"></script>
+<link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+<link href="../bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet" />
+<script src="../bower_components/angularjs/angular.min.js"></script>
 
 <script>
 
